<resources>
    <string name="app_name">Marilou2</string>

    <string name="app_parameters">Paramètres</string>
    <string name="change_nb_buttons">Changer le nombre de boutons:</string>
    <string name="password">Mot de passe</string>
    <string name="choose_password">Nouveau mot de passe</string>
    <string name="select_button_modification">Choisir un bouton à modifier</string>
    <string name="upload_informations">Charger les infos\ndu bouton</string>
    <string name="position">Position:</string>
    <string name="action">Action:</string>
    <string name="verbe">Verbe</string>
    <string name="sound">Son:</string>
    <string name="listen">Ecouter</string>
    <string name="upload_image">Charger\nune Image</string>
    <string name="image">Image:</string>
    <string name="validate">VALIDER</string>
    <string name="exit">QUITTER</string>
    <string name="link_to_create_and_download_your_own_sentences">Site pour créer et télécharger vos phrases personnalisées</string>
    <string name="change_password">Changer Mot de passe</string>
    <string name="change_sound">Charger\nun Son</string>
    <string name="save_new_sound">Enregistrer\nle nouveau Son</string>
    <string name="save_new_image">Enregistrer\nla nouvelle Image</string>
    <string name="delay_inactive_button">Délai inactivité Boutons:</string>
    <string name="delay_unit">secondes</string>
    <string name="reset_app">Réinitialiser l\'application</string>
    <string name="text_reset_warning">En confirmant vous remettrez l\'application\nà son état d\'origine par défaut:\nImages, sons, disposition des boutons\net mot de passe</string>
    <string name="reset">Réinitialiser\nl\'application</string>
    <string name="confirm">Confirmer</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="wait_while_upload">Enregistrement...\nAttendre\npour VALIDER</string>
    <string name="read_notice">Télécharger\nMode d\'emploi</string>

    <string-array name="nb_buttons_input">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>